tests/baselines/reference/baseTypeWrappingInstantiationChain.errors.txt
tests/cases/compiler/baseTypeWrappingInstantiationChain.ts(1,21): error TS2686: A class must be declared after its base class.
tests/cases/compiler/baseTypeWrappingInstantiationChain.ts(12,25): error TS2686: A class must be declared after its base class.


==== tests/cases/compiler/baseTypeWrappingInstantiationChain.ts (2 errors) ====
    class C<T1> extends CBase<T1> {
                        ~~~~~~~~~
!!! error TS2686: A class must be declared after its base class.
        public works() {
            new CBaseBase<Wrapper<T1>>(this);
        }
        public alsoWorks() {
            new CBase<T1>(this); // Should not error, parameter is of type Parameter<Wrapper<T1>>
        }
    
        public method(t: Wrapper<T1>) { }
    }
    
    class CBase<T2> extends CBaseBase<Wrapper<T2>> {
                            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2686: A class must be declared after its base class.
    
    }
    
    class CBaseBase<T3> {
        constructor(x: Parameter<T3>) { }
    }
    
    class Parameter<T4> {
        method(t: T4) { }
    }
    
    class Wrapper<T5> {
        property: T5;
    }